--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
 .body2 {
     width: 1910px;
     height: 1000px;
-    background-image: url("lelbyy.github.io/IntProg/img/image1.png");
+    background-image: url("img/image1.png");
     background-size: 120%;
 }
 
 .body3 {
     width: 1910px;
     height: 1000px;
-    background-image: url("lelbyy.github.io/IntProg/img/image2.png");
+    background-image: url("img/image2.png");
     background-size: 100%;
 }
 
