--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+.body2 {
+    width:100%;
+    height: 1000px;
+    background-image: url("img/image1.png");
+    background-size: 100%;
+}
+
+.body3 {
+    width:100%;
+    height:1000px;
+    background-image: url("img/image2.png");
+    background-size: 100%;
+}
 
 h1 {
     font-size: 150%;  
