--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .body2 {
     width:100%;
     height: 1000px;
+    min-height:1000px;
     background-image: url("img/image1.png");
     background-size: 100%;
 }
@@ -8,6 +9,7 @@
 .body3 {
     width:100%;
     height:1000px;
+    min-height:1000px;
     background-image: url("img/image2.png");
     background-size: 100%;
 }
@@ -75,7 +77,7 @@ h6 {
     bottom: 400;
 }
 
-.nomera {
+.rooms {
     position: absolute;
     left: 950px;
     right: 30px;
@@ -89,7 +91,7 @@ h6 {
     text-align: center;
 }
 
-.card{
+.card {
     width: 18rem;
     background-color: white;
 }
@@ -101,11 +103,11 @@ h6 {
     width: 6em;
 }
 
-.form-group{
+.form-group {
     text-align: center;
 }
 
-.btn-primary{
+.btn-primary {
     height:50px;
     width:170px;
     margin-left: 46%;
