--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ h6 {
 
 .rooms {
     position: absolute;
-    left: 950px;
+    left: 1300px;
     right: 30px;
     margin-top: 3%;
     bottom: 150;
@@ -110,5 +110,14 @@ h6 {
 .btn-primary {
     height:50px;
     width:170px;
-    margin-left: 46%;
+    margin-left: 35%;
+    margin-top: 2%;
+}
+
+
+.login-input {
+    position: absolute;
+    top: 30%;
+    left: 35%;
+    width: 600px;
 }
